<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.org.cacophony.cacophonometer.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:targetApi="lollipop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"

        >

        <RelativeLayout
            android:id="@+id/relative_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >


            <View
                android:id="@+id/SplitLine_hor1"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/introduction"
                android:text="@string/introduction"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/SplitLine_hor1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/SplitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@id/introduction"
            android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/chooseModeTitle"
                android:text="@string/choose_mode"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/SplitLine_hor2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/chooseModeMessage"
                android:text="@string/choose_mode_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseModeTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chooseModeRadioButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/chooseModeMessage">
                <RadioButton android:id="@+id/offMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:onClick="onModeRadioButtonClicked"/>
                <RadioButton android:id="@+id/normalMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_mode"
                    android:onClick="onModeRadioButtonClicked"/>
                <RadioButton android:id="@+id/normalModeOnline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_mode_online"
                    android:onClick="onModeRadioButtonClicked"/>
                <RadioButton android:id="@+id/walkingMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walking_mode"
                    android:onClick="onModeRadioButtonClicked"/>
            </RadioGroup>

            <View
                android:id="@+id/SplitLine_hor3"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@id/chooseModeRadioButtons"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/recordNowButton"
                android:text="@string/record_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SplitLine_hor3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:onClick="recordNowButtonClicked" />





        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
