...

    <string name="to_register_instructions">(Choose Help from the menu for full instructions): \n\n1) Register on the Bird Monitor data server (https://browse.cacophony.org.nz/). \n\n2) Create a Group name on the data server, \n\n3) Enter the Group name in the field below and press Register button, \n\n4) Check that the text below says - device (your device name) is registered in group (your group
    <string name="register">Register</string>
    <string name="unregister">unregister</string>
    <string name="record_now">Record Now</string>

    <string name="off">Off - Will not override any settings.</string>
    <string name="normal_mode">Normal Mode.</string>

    <string name="normal_mode_online">Normal Mode (But keep internet connection on).</string>


    <string name="choose_mode">Choose Mode</string>
    <string name="introduction">To test your device, first choose Settings from the menu (top right). Once that is done you can choose the mode below and you are ready to go.</string>
    <string name="wizard_introduction">If you haven\'t already done so, register on the Cacophony website and create a group.</string>
    <string name="choose_mode_message">Select a mode to override the options selected in settings (uses most appropriate values).</string>
    <string name="location_not_set">GPS Location not set.</string>
    <string name="update_gps_location">Update GPS Location</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>


    <string name="device_id">Device ID:</string>

    <string name="gps_text">GPS location: </string>
    <string name="message_text">Messages: </string>message_text
...
