<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/button_help"
        android:icon="@drawable/help"
        android:title="Help"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>