<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nz.org.cacophony.cacophonometer.SetupActivity"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"

        >

        <RelativeLayout
            android:id="@+id/relative_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >

...
                android:layout_below="@id/setupGpsLocationMessage"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:id="@+id/cbPeriodicallyUpdateGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setupGPSLocationStatus"
                android:checked="false"
                android:onClick="onCheckboxPeriodicallyUpdateLocationClicked"
                android:text="@string/periodically_update_location" />
...
